# SWIG_Example

./: CMakeLists.txt  README.md
include/: functions.hpp
src/: functions.cpp  main.cpp
swig/: CMakeLists.txt  functions.i
swig/python/: CMakeLists.txt  setup.py.in  test.py
